--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,15 @@
 server:
   port: 8089
-
   spring:
     application:
       name: JobSearch
 
-      spring:
-        url=jdbc:h2:./db/test;AUTO_SERVER=TRUE
+    datasource:
+      url: jdbc:h2:./db/JobSearch;AUTO_SERVER=TRUE
+      username: root
       password: qwerty
-    driver-class-name=org:
-      h2:
-        Driver:
+      driver-class-name: org.h2.Driver
+
+      sql:
+        init:
+          mode: always
