--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,7 @@ server:
       sql:
         init:
           mode: always
+
+          liquibase:
+            change-log: classpath:db/changelog/master.yml
+            enabled: true
