--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,19 +1,14 @@
 server:
   port: 8089
-  spring:
-    application:
-      name: JobSearch
+spring:
+  application:
+    name: JobSearch
 
-    datasource:
-      url: jdbc:h2:./db/JobSearch;AUTO_SERVER=TRUE
-      username: root
-      password: qwerty
-      driver-class-name: org.h2.Driver
+  datasource:
+    url: jdbc:h2:./db/JobSearch;AUTO_SERVER=TRUE
+    username: root
+    password: qwerty
+    driver-class-name: org.h2.Driver
 
-      sql:
-        init:
-          mode: always
-
-          liquibase:
-            change-log: classpath:db/changelog/master.yml
-            enabled: true
+  liquibase:
+    change-log: classpath:/db/changelog/master.yml
